Contrast (UI) fixes + Monster saves/skills
DM mode => racial HD => saves + skills now calculate.

--- a/src/styles/variables/_colors.scss
+++ b/src/styles/variables/_colors.scss
@@ -1,11 +1,8 @@
 $black: #2e2e2e;
 $white: #e0e0e0;
 
-$d-gray: #101317;
-$l-gray: #1c1f1f;
-$red: #cf3030;
-$green: #30cf50;
-$blue: #3050cf;
+$d-gray: #131515;
+$l-gray: lighten($d-gray, 8%);
 $orange: #cf9030;
 
 $primary: $d-gray;
